task-02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-health-deployment    
spec:
    replicas: 2
    selector:
        matchLabels:
            app: nginx-health-app    
    template:
        metadata:
            labels:
                app: nginx-health-app
        spec:
            containers:
            - name: nginx-health-app              
              image: sergusha/otus-architecture:task-01
              ports:
                  - name: web
                    containerPort: 8000
