task-02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-health-service
spec:
  selector:
    app: nginx-health-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
